added dynamic feedback page