@@ -4,7 +4,8 @@
 	<artifactId>assessment-tool</artifactId>
 	<version>1.0.0</version>
 	<packaging>war</packaging>
-	<!-- mvn package -DskipTests jetty:run -Djetty.port=8081 -->
+    <!-- mvn package -DskipTests jetty:run -Djetty.port=8081 -->
+    <!-- export MAVEN_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y" -->
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
